# name

./: .gitignore  Cargo.toml  Makefile  README.md  \
.github/workflows/: ci.yml
name/: Cargo.toml
name-as/: Cargo.toml
name-as/src/: args.rs  lib.rs  main.rs
name-as/src/assembler/: assemble_file.rs  assemble_instruction.rs  assemble_line.rs  assembler.rs  assembly_helpers.rs  assembly_utils.rs  directive_handler.rs  directives.rs  macro.rs  macros.rs  mod.rs  to_be_bytes.rs
name-as/src/definitions/: constants.rs  expandables.rs  mod.rs  pseudo_instructions.rs  structs.rs
name-core/: Cargo.toml
name-core/src/: constants.rs  elf_def.rs  elf_utils.rs  implementations.rs  lib.rs  simulator_helpers.rs  structs.rs  syscalls.rs
name-core/src/debug/: debug_utils.rs  debugger_methods.rs  mod.rs  (+4 more)
name-core/tests/: lexer_test.rs
name-debug-adapter/: Cargo.toml
name-debug-adapter/src/: dap_handlers.rs  dap_server.rs  dap_structs.rs  event_handler.rs  io_forward.rs  lib.rs  main.rs  request_handler.rs  response.rs
name-emu/src/: args.rs  main.rs  simulator.rs
name-emu/tests/: fib_emu_test.rs  hello_world_emu_test.rs  instruction_demonstration_emu_test.rs
name-ext/: CHANGELOG.md  README.md  package.json
name-ext/src/: extension.ts  layout.md  simple_commands.ts  tree.ts
name-ld/src/: consolidate.rs  constants.rs  linker.rs  offsets.rs  relocate_helpers.rs  text_relocation.rs
name/src/: main.rs
test_files/fib/: fib
tests/: Cargo.toml  integration.rs
tests/samples/: SysCalls.asm  char_test.asm  fib.asm  hello_macro.asm  hello_world.asm  mips_test.asm
(+54 files in other folders)
